# GainGoblin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: market_data_settings.example.json
src/gaingoblin/: __init__.py  __main__.py  app.py  calculations.py  database.py  goblin_personality.py  logging_config.py  main_window.py  models.py  quote_comparison.py  range_calculator.py  theme.py
src/gaingoblin/assets/: README.md
src/gaingoblin/importers/: __init__.py  column_mapper.py  holdings_importer.py  import_models.py  pasted_text_reader.py  pdf_reader.py  robinhood_parser.py  spreadsheet_reader.py
src/gaingoblin/market_data/: __init__.py  cache.py  errors.py  historical_range.py  http.py  models.py  provenance.py  provider_base.py  secret_store.py  settings.py
src/gaingoblin/ui/: __init__.py  breakpoints.py  flow_layout.py  image_quality.py  nine_slice.py  parchment_painter.py  stage_geometry.py
src/gaingoblin/widgets/: __init__.py  clipboard_shell.py  dialog_utils.py  goblin_animation.py  goblin_companion.py  goblin_sprite_loader.py  holding_dialog.py  holdings_table.py  import_dialog.py  market_data_settings_dialog.py  range_calculator_dialog.py  speech_bubble.py  summary_cards.py
tests/: test_accounts_database.py  test_alpha_vantage_provider.py  test_breakpoints.py  test_calculations.py  test_clipboard_shell_layout.py  test_column_mapper.py  test_database.py  test_goblin_animation.py  test_goblin_personality.py  test_goblin_sprite_loader.py  test_historical_range.py  test_holdings_importer.py  test_import_dialog.py  test_main_window_goblin_ui.py  test_market_data_cache.py  test_market_data_models.py  test_market_data_provenance.py  test_market_data_provider_base.py  test_market_data_settings_dialog.py  test_pasted_text_reader.py  test_pdf_reader.py  test_quote_comparison.py  test_range_calculator.py  test_range_calculator_dialog.py  test_range_calculator_market_data.py  test_readme_wording.py  test_robinhood_parser.py  test_secret_store.py  test_spreadsheet_reader.py
(+9 files in other folders)
