[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "GainGoblin"
version = "0.1.10a0"
description = "A local-first manual stock profit planner."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "openpyxl>=3.1",
    "pypdf>=4.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
gaingoblin = "gaingoblin.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gaingoblin = [
    "assets/*.md",
    "assets/*.png",
    "assets/clipboard_kit/*.md",
    "assets/clipboard_kit/*.json",
    "assets/clipboard_kit/*.png",
    "assets/premium_ui/*.png",
    "assets/goblin/*.json",
    "assets/goblin/*.md",
    "assets/goblin/*/*.png",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
    "E501",
    "B905",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "F841"]
